# numnum

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  fly.toml  nginx-proxy.conf  ops
.github/workflows/: deploy.yml  tests.yml
.github/workflows/.github/workflows/: deploy.yml  tests.yml
backend/: manage.py  pyproject.toml
backend/apps/base/: urls.py  views.py
backend/numnum/: asgi.py  settings.py  urls.py  wsgi.py
backend/tests/: test_placeholder.py
frontend/: index.html  math.html  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/components/: CountDown.vue
frontend/src/router/: index.ts
frontend/src/stores/: score.ts
frontend/src/views/: HomeView.vue  MathView.vue
