[tool.poetry]
name = "numnum"
version = "2023.03.22"
description = "Get some numnum"
authors = ["Andrew Hughes <andrew@mirus.io>",]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
django-localflavor = "1.0"
gunicorn = "20.0.0"
Pillow = "^7.0.0"
psycopg2 = "2.8.4"
easy_thumbnails = "2.8.5"
pytest-django = "^4.5.2"
whitenoise = "^6.4.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE="numnum.settings"
python_files = "test_*.py **/test_*.py"
